# quiche

./: .gitignore  EGRAPHS22.pptx  LICENSE  README.md  WiCTSlides.pptx  egraph.py  expr_test.py  pyproject.toml  requirements.txt  rewrite.py  setup.cfg  setup.py  test.py
.github/workflows/: python-package.yml
demo/: .gitignore  arithmetic_demo.py  demo.py  egraphs_demo.py  newton_sqrt.py  time_conversion.py  time_folding.py
quiche/: analysis.py  ast_quiche_tree.py  ast_size_cost_model.py  egraph.py  insert_ast_block_traversal.py  quiche_tree.py  rewrite.py
src/quiche/: __init__.py  analysis.py  ast_constant_folding.py  ast_heuristic_cost_model.py  ast_quiche_tree.py  ast_size_cost_model.py  egraph.py  quiche_tree.py  rewrite.py
src/quiche/lang/: expr_constant_folding.py  expr_lang.py  prop_lexer.py
src/quiche/pal/: pal_block.py  pal_extract_310.py  pal_extract_37.py  pal_extract_38.py  pal_extract_39.py  pal_lift_310.py  pal_lift_37.py  pal_lift_38.py  pal_lift_39.py  pal_lifter.py
src/quiche/pyast/: __init__.py  ast_constant_folding.py  ast_heuristic_cost_model.py  ast_quiche_tree.py  ast_size_cost_model.py  pyarith_rewrites.py  pybitwise_rewrites.py  pycode_rewrites.py  pylogic_rewrites.py  pyrelational_rewrites.py
src/quiche/pyast/pal/: __init__.py  pal_block.py  pal_extract_310.py  (+9 more)
tests/: expr_lang.py  expr_test.py  prop_parser.py  prop_test.py  prop_test_lexer.py  prop_test_node.py  prop_test_parser.py  test_asts.py  test_egraph.py  test_expr.py  test_prop.py  test_pyast_pyarith_rewrites.py  test_sqrt.py  util.py
tests/input/: constant_folding.py
