[metadata]
name = quiche
version = 0.0.1
author = Bex Swords
author_email = riswords@gmail.com
description = Quiche: E-Graphs for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riswords/quiche
project_urls =
    Bug Tracker = https://github.com/riswords/quiche/issues

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
